# dfcached

./: .gitignore  pyproject.toml
.github/workflow/: ci.yml  workflow.yml
.github/workflows/: ci.yml  workflow.yml
src/dfcached/: __init__.py  _io.py  _key.py  _lock.py  cache.py  decorator.py  utils.py
tests/: test_clear.py  test_concurrency.py  test_core.py  test_integrity.py  test_keys.py  test_smoke.py
